--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -29,10 +29,10 @@ jobs:
           ruby release.rb
       - name: commit and push
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
         run: |
           git config --global user.email "s.kaoru509@gmail.com"
           git config --global user.name "Seo-4d696b75"
           git add .
           git commit -m '[update] release'
-          git push origin main
+          git push ${REPO} main
