[fix] データに更新がある場合のみ実行
push に加え実行条件を追加

--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,8 +1,11 @@
-name: auto-update
+name: auto-release
 on:
   push:
     branches:
       - main
+    paths:
+      - event.json
+      - icon.json
 jobs:
   test:
     runs-on: ubuntu-latest
