--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 15 * * *' # JST+0900 で毎時0:00に実行
+    - cron: '0 15 * * *' # JST(UTC+0900) で毎時0:00に実行
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -23,20 +23,20 @@ jobs:
         run: |
           git add -N . # 新規ファイルを含める
           echo "::set-output name=count::$(git diff --name-only | wc -l)"
-      - name: run test
-        if: steps.diff.outputs.count > 0
+      - name: run test # 以降は差分がある場合のみ実行
+        if: steps.diff.outputs.count > 0 
         run: |
           echo "::add-matcher::.github/problem-matcher.json"
           gem install minitest
           ruby test.rb
-      - name: commit update
+      - name: commit update # 更新差分を一旦コミット
         if: steps.diff.outputs.count > 0
         run: |
           git config --global user.email "s.kaoru509@gmail.com"
           git config --global user.name "Seo-4d696b75"
           git add .
           git commit -m "[update] event data"
-      - name: release
+      - name: release # 公開するデータフォーマットに変換
         if: steps.diff.outputs.count > 0
         run: ruby release.rb
       - name: commit and push
