--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
           ref: 'main'
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6'
       - name: update
