--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Local File",
+      "name": "Debug Current File",
       "type": "Ruby",
       "request": "launch",
-      "program": "${workspaceRoot}/update.rb"
+      "program": "${file}"
     }
   ]
 }
