--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,21 +29,16 @@ jobs:
           echo "::add-matcher::.github/problem-matcher.json"
           gem install minitest
           ruby src/test.rb
-      - name: commit update # 更新差分を一旦コミット
-        if: steps.diff.outputs.count > 0
-        run: |
-          git config --global user.email "s.kaoru509@gmail.com"
-          git config --global user.name "Seo-4d696b75"
-          git add .
-          git commit -m "[update] event data"
       - name: release # 公開するデータフォーマットに変換
         if: steps.diff.outputs.count > 0
         run: ruby src/release.rb
       - name: commit and push
         if: steps.diff.outputs.count > 0
-        env:
-          REPO: https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
         run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "actions-user"
+          git add ./icon ./src
+          git commit -m "[update] event data"
           git add .
           git commit -m "[release] latest data"
-          git push ${REPO} main
+          git push origin main
