--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,9 +11,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: 'main'
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v5
         with:
           node-version-file: '.tool-versions'
+          cache: 'npm'
       - name: install dependencies
         run: npm ci
       - name: download data
